--- a/pythonium/index.html
+++ b/pythonium/index.html
@@ -48,19 +48,17 @@
                 let sprite;
                 if (p.thing_type == "planet") {
                     sprite = new PIXI.TilingSprite(textures.planets[index % 3]);
-                    // sprite = PIXI.Sprite.from(planets[index % 3]);
                     sprite.anchor.set(0.5);
-                    sprite.scale.set(0.05);
-                    // sprite.width = 20;
-                    // sprite.height = 20;
+                    sprite.scale.set(0.15);
                     //sprite.visible = false;
                 } else {
                     sprite = new PIXI.TilingSprite(textures.ships[0]);
-                    sprite.width = 10;
-                    sprite.height = 10;
+                    sprite.anchor.set(0.5);
+                    sprite.scale.set(0.15);
+                    sprite.tint = 0xFF0000;
                 }
                 sprite.position = {
-                    x: p.position[0]*resizeFactor, 
+                    x: p.position[0]*resizeFactor,
                     y: p.position[1]*resizeFactor
                 };
                 app.stage.addChild(sprite);
