--- a/pythonium/index.html
+++ b/pythonium/index.html
@@ -52,7 +52,7 @@
         document.getElementById("visualization").appendChild(app.view);
 
         function renderTheGalaxy(simulationStep) {
-            data[simulationStep].things.forEach((p, index, array) => {
+            data.turns[simulationStep].things.forEach((p, index, array) => {
                 let sprite;
                 if (p.thing_type == "planet") {
                     sprite = PIXI.Sprite.from(planets[index % 3]);
@@ -72,7 +72,7 @@
             });
         }
 
-        let N_STEPS = data.length;
+        let N_STEPS = data.turns.length;
         let DEFAULT_DELAY = 500;  // milliseconds
         var counter = 0;
         let stepInputElem = document.getElementById("step-input");
