fix web renderer after changes in file locations

--- a/pythonium/webrenderer/index.html
+++ b/pythonium/webrenderer/index.html
@@ -45,5 +45,5 @@
         let data = <!-- DATA PLACEHOLDER -->
     </script>
 
-    <script src="web_renderer.js"></script>
+    <script src="webrenderer/web_renderer.js"></script>
 </html>
