--- a/pythonium/webrenderer/index.html
+++ b/pythonium/webrenderer/index.html
@@ -24,9 +24,9 @@
                 
                 <div class="btn-toolbar" role="toolbar">
                     <div class="btn-group" role="group">
-                        <button id="animation-prev" class="btn btn-primary"> &#x23EA; </button>
+                        <button id="animation-prev" class="btn btn-primary" disabled="true"> &#x23EA; </button>
                         <button id="animation-control" class="btn btn-primary"> &#x23EF; Pause</button>
-                        <button id="animation-next" class="btn btn-primary"> &#x23E9; </button>
+                        <button id="animation-next" class="btn btn-primary" disabled="true"> &#x23E9; </button>
                     </div>
                     <div class="btn-group" role="group">
                         <button id="fullscreen-input" type="button" class="form-control">Fullscreen</button>
