include a slider to handle simulation step

--- a/pythonium/webrenderer/index.html
+++ b/pythonium/webrenderer/index.html
@@ -21,8 +21,12 @@
                     <label for="step-input" class="col-form-label">Simulation step</label>
                 </div>
                 <div class="col-auto">
-                    <input id="step-input" type="number" readonly="true" class="form-control">
+                    <input id="step-slider" type="range" readonly="true" class="form-range">
                 </div>
+                <div class="col-auto">
+                    <span id="step-label" class="form-text">
+                    </span>
+                  </div>
                 
                 <div class="btn-toolbar" role="toolbar">
                     <div class="btn-group" role="group">
